# revcyclemgmt-claims-pipeline

./: .gitignore  COMPLIANCE.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apps/dashboard/: rcm_app.py
config/: pipeline.example.yml
config/ingress/: aws_s3_bucket_policy.sample.json  bigquery_external_claims_table.sql  run_log.sample.json
config/mappings/: carc_groups.csv
database/schemas/: acknowledgments.sql  adjudication.sql  claim_status.sql  claims_header.sql  claims_line.sql  kpi_daily.sql  payments.sql
docs/: website-card-copy.md
docs/00-business/: mission-vision-scope.md  revenue-launch-operating-layer.md
docs/01-architecture/: claims-workflow.md  interoperability-bridge.md
docs/02-governance/: operational-safeguards.md
docs/03-website/: portfolio-card-copy.md
docs/04-runbooks/: local-demo.md  secure-ingress.md
docs/04-runbooks/evidence-templates/: ingress-checklist.md  validation-report.md
docs/05-migration/: portfolio-scope-disposition.md
docs/06-portfolio/: edi-x12-implementation-roadmap.md
output_demo/: claims_pipeline_summary.json
src/revcyclemgmt_claims/: __init__.py
src/revcyclemgmt_claims/interoperability/: __init__.py  fhir_patient.py  hl7_pid.py
src/revcyclemgmt_claims/parsers/: x12_bots_adapter.py  x12_pyx12_adapter.py
src/revcyclemgmt_claims/pipelines/: build_marts.py  ingest_edi.py  proof_artifacts.py  utils.py
tests/: test_mapping.py
tests/sample_data/: demo_277ca.txt  demo_835.txt  demo_837p.txt  demo_999.txt
