[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "revcyclemgmt-claims-pipeline"
version = "0.1.0"
description = "Synthetic RevCycleMGMT claims workflow demo for EDI/X12, clearinghouse acknowledgments, remittance, denials, and RCM KPI marts."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "RevCycleMGMT" }
]
dependencies = [
  "pandas>=2.2",
  "pyarrow>=16.0",
  "python-dotenv>=1.0",
  "typer>=0.12",
  "streamlit>=1.36"
]

[tool.setuptools.packages.find]
where = ["src"]
